--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,11 +1,13 @@
-groq
-python-dotenv
-cohere
-rich
-selenium
-webdriver-manager
-mtranslate
-pygame
-edge-tts
-PyQt5
-google-speech
+PyQt5==5.15.9
+python-dotenv==1.0.0
+groq==0.4.1
+google-generativeai==0.3.2
+langchain-huggingface==0.0.2
+langchain-core==0.1.30
+langchain==0.1.11
+langchain_community==0.0.29
+faiss-cpu==1.7.4
+cohere==4.49
+SpeechRecognition==3.10.0
+pyttsx3==2.90
+pydub==0.25.1
